# PIMMS

./: .gitignore  .lgtm.yml  .travis.yml  MANIFEST.in  README.md  build.sh  changelog.md  keywords.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
demo_keyfiles/co_assembly_demo/: readme.md
demo_keyfiles/compute_residue_distances_demo/: KEYFILE.kf
demo_keyfiles/demo_1/: KEYFILE.kf  params.prm  readme.md
demo_keyfiles/demo_2/: KEYFILE.kf
demo_keyfiles/demo_3/: KEYFILE.kf  KEYFILE.kf~  log.txt  parameters_used.prm  params.prm  readme.md  restart.pimms
demo_keyfiles/single_chain_polymer/: readme.md
demo_keyfiles/single_chain_protein_demo/: gcf_rje23_v14.prm  readme.md  (+1 more)
demos/: readme.md
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  output_files.rst
pimms/: #mega_crank.pyx#  .#mega_crank.pyx  CONFIG.py  IO_utils.py  MANIFEST  __init__.py  _version.py  acceptance.py  analysis_IO.py  analysis_general.py  analysis_structures.py  chain.py  chainTSMMC.py  check_randomness.py  cluster_utils.py  crankshaft_list_functions.py  cython_config.pxd  cython_testing.py  data_structures.py  energy.py  file_utilities.py  general_utils.py  get_randmax.pyx  hyperloop.pyx  initialized_systems.py  inner_loops.pyx  inner_loops_hardwall.pyx  keyfile_parser.py  lattice.py  latticeExceptions.py  lattice_analysis_utils.py  lattice_tools.pyx  lattice_utils.py  longrange_utils.py  mega_crank.pyx  mega_crank_2D.pyx  moveEvent.py  moves.py  moveset.py  nonequilibrium_utils.py  (+17 more)
scripts/: PIMMS  PIMMS~
(+100 files in other folders)
