[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython",
    "numpy",
    "versioningit>=2",
]
build-backend = "setuptools.build_meta"

[project]
name = "pimms"
dynamic = ["version"]
description = "Lattice simulation package for biomolecules"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPLv3" }
authors = [
    { name = "Alex Holehouse", email = "alex.holehouse@wustl.edu" },
]

[tool.versioningit]
default-version = "0+unknown"
